# Open-Transactions.old

./: .gitignore  VERSION
cmd/: build.sh
cmd/tool/: new_build.sh
docs/: INSTALL-Debian_Ubuntu.txt  INSTALL-linux-modern.txt  PERFORMANCE-TESTS.txt  PRECOMPILED-HEADERS-PCH-linux.txt  newcli.txt
include/otapi/: OTAPI.h  OpenTransactions.h
include/otlib/: OTContract.h  OTRunnableAsProgram.h  OTString.h  stdafx.h
src/otapi/: OTAPI.cpp  OpenTransactions.cpp
src/othint/: .gitignore  CMakeLists.txt  README.txt  a.out  doc.txt  main.cpp  nyms.txt  readme.txt  run-devel.sh  run.sh  start.sh  todo-and-bugs.txt
src/othint/cmake/modules/: FindEditline.cmake  FindEditlineLocal.cmake  FindOTLocal.cmake  Findreadline.cmake
src/othint/editline/: build.sh
src/othint/editline/libedit-20130712-3.1/src/: filecomplete.c  readline.c
src/othint/test-bash/: ot
src/otlib/: Makefile.am  OTContract.cpp  OTCredential.cpp  OTCronItem.cpp  OTCrypto.cpp  OTPayment.cpp  OTPseudonym.cpp  OTRunnableAsProgram.cpp  OTScriptable.cpp  OTString.cpp  OTWallet.cpp
src/ots/: OTServer.cpp
utils/compiler-wrapper/: README.txt  install.sh
